# testar-waveshare-modbus

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  index.md
src/: DigitalIoDevice.py  ModbusDevice.py  ModbusDeviceCli.py  RelayDevice.py  Utils.py  __init__.py  __main__.py
