[project]
name = "testar-waveshare-modbus"
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README.md"
description = "A package for testing Waveshare Modbus devices"
authors = [{ name = "Denis Schoener", email = "denis@schoener-one.de" }]
keywords = ["modbus", "testing", "waveshare"]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"
pymodbus = "^3.11.0"
importlib-metadata = "^4.0; python_version < '3.8'"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
black = "^21.7b0"
flake8 = "^3.9"

[tool.poetry.scripts]
testar = "src.__main__:main"
